--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,11 +1,4 @@
 #main {
-    .tab-content {
-        margin-top: 20px;
-    }
-    .nav-link.active {
-        background-color: #6c757d;
-        color: #fff;
-    }
     .jumbotron {
         padding: 1rem;
         text-align: left;
